--- a/charts/kubezero-argo-cd/Chart.yaml
+++ b/charts/kubezero-argo-cd/Chart.yaml
@@ -1,8 +1,7 @@
 apiVersion: v2
-name: kubezero-app
-description: KubeZero ArgoCD Application - Root chart of the KubeZero
-type: application
-version: 0.2.4
+description: KubeZero ArgoCD Helm chart to install ArgoCD itself and the KubeZero ArgoCD Application
+name: kubezero-argo-cd
+version: 0.3.0
 home: https://kubezero.com
 icon: https://cdn.zero-downtime.net/assets/kubezero/logo-small-64.png
 keywords:
@@ -12,7 +11,11 @@ keywords:
 maintainers:
   - name: Quarky9
 dependencies:
+dependencies:
   - name: kubezero-lib
     version: ">= 0.1.1"
     repository: https://zero-down-time.github.io/kubezero/
+  - name: argo-cd
+    version: 2.3.2
+    repository: https://argoproj.github.io/argo-helm
 kubeVersion: ">= 1.16.0"
