--- a/charts/kubezero/Chart.yaml
+++ b/charts/kubezero/Chart.yaml
@@ -1,7 +1,8 @@
 apiVersion: v2
-description: KubeZero Helm chart to install Zero Down Time Kuberenetes platform
 name: kubezero
-version: 0.2.6
+description: KubeZero ArgoCD Application - Root App of Apps chart of KubeZero
+type: application
+version: 0.3.0
 home: https://kubezero.com
 icon: https://cdn.zero-downtime.net/assets/kubezero/logo-small-64.png
 keywords:
@@ -11,11 +12,7 @@ keywords:
 maintainers:
   - name: Quarky9
 dependencies:
-dependencies:
   - name: kubezero-lib
     version: ">= 0.1.1"
     repository: https://zero-down-time.github.io/kubezero/
-  - name: argo-cd
-    version: 2.3.2
-    repository: https://argoproj.github.io/argo-helm
 kubeVersion: ">= 1.16.0"
