--- a/deploy/templates/values.yaml
+++ b/deploy/templates/values.yaml
@@ -1,10 +1,17 @@
 kubezero:
+  {{- if .Values.global }}
+  globals:
+    {{- toYaml .Values.global | nindent 4 }}
+  {{- end }}
   calico:
     enabled: {{ .Values.calico.enabled  }}
   cert-manager:
     enabled: {{ index .Values "cert-manager" "enabled" }}
-{{- if not .Values.bootstrap }}
     values:
+{{- if .Values.bootstrap }}
+      localCA:
+        enabled: false 
+{{- else }}
       {{- if .Values.aws }}
       cert-manager:
         podAnnotations:
@@ -16,7 +23,10 @@ kubezero:
         email: {{ index .Values "cert-manager" "email" }}
         solvers:
           - selector:
-              dnsZones: {{ index .Values "cert-manager" "domains" }}
+              dnsZones:
+              {{- with index .Values "cert-manager" "dnsZones" }}
+              {{- . | toYaml | nindent 14 }}
+              {{- end }}
             dns01:
               {{- if .Values.aws }}
               route53:
