--- a/artifacts/kubezero-calico/calico-aws.yaml
+++ b/artifacts/kubezero-calico/calico-aws.yaml
@@ -3522,7 +3522,7 @@ spec:
                   key: calico_backend
             # Cluster type to identify the deployment type
             - name: CLUSTER_TYPE
-              value: "k8s,kubeadm"
+              value: "k8s,bgp"
             # Auto-detect the BGP IP address.
             - name: IP
               value: "autodetect"
