--- a/artifacts/kubezero-calico/calico-aws.yaml
+++ b/artifacts/kubezero-calico/calico-aws.yaml
@@ -3522,7 +3522,7 @@ spec:
                   key: calico_backend
             # Cluster type to identify the deployment type
             - name: CLUSTER_TYPE
-              value: "k8s,bgp"
+              value: "k8s,kubeadm"
             # Auto-detect the BGP IP address.
             - name: IP
               value: "autodetect"
@@ -3585,7 +3585,6 @@ spec:
               command:
               - /bin/calico-node
               - -felix-live
-              - -bird-live
             periodSeconds: 10
             initialDelaySeconds: 10
             failureThreshold: 6
@@ -3594,7 +3593,6 @@ spec:
               command:
               - /bin/calico-node
               - -felix-ready
-              - -bird-ready
             periodSeconds: 10
           volumeMounts:
             - mountPath: /lib/modules
