--- a/charts/kubezero/values.yaml
+++ b/charts/kubezero/values.yaml
@@ -13,6 +13,8 @@ global:
     # defaultSource.pathPrefix -- optional path prefix within repoURL to support eg. remote subtrees
     pathPrefix: ''
 
+platform: aws
+
 calico:
   enabled: true
 
