--- a/deploy/templates/values.yaml
+++ b/deploy/templates/values.yaml
@@ -5,6 +5,9 @@ kubezero:
   {{- end }}
   calico:
     enabled: {{ .Values.calico.enabled  }}
+    {{- if .Values.calico.network }}
+    network: {{ .Values.calico.network }}
+    {{- end }}
   cert-manager:
     enabled: {{ index .Values "cert-manager" "enabled" }}
     values:
