--- a/charts/kubezero/templates/_app.yaml
+++ b/charts/kubezero/templates/_app.yaml
@@ -18,14 +18,14 @@ spec:
     targetRevision: {{ .root.Values.global.defaultSource.targetRevision }}
     {{- if eq .type "helm" }}
     {{- $my_values := index .root.Values .name "values" }}
-    path: {{ .root.Values.global.defaultSource.pathPrefix}}charts/kubezero-{{ default .name .path }}
+    path: {{ .root.Values.global.defaultSource.pathPrefix}}charts/kubezero-{{ .name }}
     {{- if $my_values }}
     helm:
       values: |
 {{- toYaml $my_values | nindent 8 }}
     {{- end }}
     {{- else }}
-    path: {{ .root.Values.global.defaultSource.pathPrefix }}artifacts/kubezero-{{ default .name .path }}
+    path: {{ .root.Values.global.defaultSource.pathPrefix }}artifacts/kubezero-{{ .name }}
     {{- end }}
 
   destination:
