--- a/charts/kubezero-calico/templates/calico.yaml
+++ b/charts/kubezero-calico/templates/calico.yaml
@@ -322,6 +322,10 @@ spec:
     spec:
       nodeSelector:
         kubernetes.io/os: linux
+        {{- if .Values.migration }}
+        # Only run Calico on nodes that have been migrated.
+        projectcalico.org/node-network-during-migration: calico
+        {{- end }}
       hostNetwork: true
       tolerations:
         # Make sure calico-node gets scheduled on all nodes.
