--- a/charts/kubezero/templates/calico.yaml
+++ b/charts/kubezero/templates/calico.yaml
@@ -1,6 +1,6 @@
 # {{ .Values.calico.network }}
 {{- if .Values.calico.enabled }}
-{{- if .Values.calico.network }}
+{{- if .Values.calico.values.network }}
 {{ template "kubezero-app.app" dict "root" . "name" "calico" "type" "helm" "retain" true }}
 {{- else }}
 {{ template "kubezero-app.app" dict "root" . "name" "calico" "type" "kustomize" "retain" true }}
