Disable prune of retain is set

--- a/charts/kubezero/templates/_app.yaml
+++ b/charts/kubezero/templates/_app.yaml
@@ -34,7 +34,9 @@ spec:
 
   syncPolicy:
     automated:
+      {{- if not .retain }}
       prune: true
+      {{- end }}
       {{- if .selfheal }}
       selfHeal: true
       {{- end }}
