--- a/charts/kubezero/templates/calico.yaml
+++ b/charts/kubezero/templates/calico.yaml
@@ -1,8 +1,3 @@
-# {{ .Values.calico.network }}
 {{- if .Values.calico.enabled }}
-{{- if .Values.calico.values.network }}
-{{ template "kubezero-app.app" dict "root" . "name" "calico" "type" "helm" "retain" true }}
-{{- else }}
-{{ template "kubezero-app.app" dict "root" . "name" "calico" "type" "kustomize" "retain" true }}
-{{- end }}
+{{ template "kubezero-app.app" dict "root" . "name" "calico" "type" .Values.calico.type "retain" true }}
 {{- end }}
