--- a/charts/kubezero/templates/aws-ebs-csi-driver.yaml
+++ b/charts/kubezero/templates/aws-ebs-csi-driver.yaml
@@ -1,3 +1,6 @@
 {{- if index .Values "aws-ebs-csi-driver" "enabled" }}
 {{ template "kubezero-app.app" dict "root" . "name" "aws-ebs-csi-driver" "type" "helm" }}
+  syncPolicy:
+    automated:
+      prune: true
 {{- end }}
