--- a/charts/kubezero/templates/kiam.yaml
+++ b/charts/kubezero/templates/kiam.yaml
@@ -1,3 +1,6 @@
 {{- if index .Values "kiam" "enabled" }}
 {{ template "kubezero-app.app" dict "root" . "name" "kiam" "type" "helm" }}
+  syncPolicy:
+    automated:
+      prune: true
 {{- end }}
