--- a/charts/kubezero/templates/local-volume-provisioner.yaml
+++ b/charts/kubezero/templates/local-volume-provisioner.yaml
@@ -1,3 +1,6 @@
 {{- if index .Values "local-volume-provisioner" "enabled" }}
 {{ template "kubezero-app.app" dict "root" . "name" "local-volume-provisioner" "type" "kustomize" }}
+  syncPolicy:
+    automated:
+      prune: true
 {{- end }}
