--- a/charts/kubezero/templates/calico.yaml
+++ b/charts/kubezero/templates/calico.yaml
@@ -1,7 +1,11 @@
 {{- if .Values.calico.enabled }}
 {{ template "kubezero-app.app" dict "root" . "name" "calico" "type" .Values.calico.type "retain" true }}
+  syncPolicy:
+    automated:
+      prune: true
+
   ignoreDifferences:
-  - group: api
+  - group: apiextensions.k8s.io
     kind: CustomResourceDefinition
     jsonPointers:
     - /status
