--- a/charts/kubezero/templates/local-volume-provisioner.yaml
+++ b/charts/kubezero/templates/local-volume-provisioner.yaml
@@ -1,5 +1,5 @@
 {{- if index .Values "local-volume-provisioner" "enabled" }}
-{{ template "kubezero-app.app" dict "root" . "name" "local-volume-provisioner" "type" "kustomize" }}
+{{ template "kubezero-app.app" dict "root" . "name" "local-volume-provisioner" "type" "helm" }}
   syncPolicy:
     automated:
       prune: true
