--- a/charts/kubezero-argo-cd/templates/project.yaml
+++ b/charts/kubezero-argo-cd/templates/project.yaml
@@ -20,6 +20,10 @@ spec:
     server: https://kubernetes.default.svc
   - namespace: cert-manager
     server: https://kubernetes.default.svc
+  - namespace: istio-operator
+    server: https://kubernetes.default.svc
+  - namespace: istio-system
+    server: https://kubernetes.default.svc
 
   clusterResourceWhitelist:
   - group: '*'
