We skip Istio 1.5, hook into deploy flow

--- a/deploy/templates/values.yaml
+++ b/deploy/templates/values.yaml
@@ -63,6 +63,10 @@ kubezero:
             servicemonitor:
               enabled: {{ .Values.prometheus.enabled }}
   {{- end }}
+
+  istio:
+    enabled: {{ .Values.istio.enabled }}
+
 {{- end }}
 
 argo-cd:
