--- a/charts/kubezero-istio/Chart.yaml
+++ b/charts/kubezero-istio/Chart.yaml
@@ -2,8 +2,8 @@ apiVersion: v2
 name: kubezero-istio
 description: KubeZero Umbrella Chart for Istio
 type: application
-version: 0.1.2
-appVersion: 1.6
+version: 0.1.3
+appVersion: 1.6.5
 home: https://kubezero.com
 icon: https://cdn.zero-downtime.net/assets/kubezero/logo-small-64.png
 keywords:
@@ -16,5 +16,5 @@ dependencies:
     version: ">= 0.1.1"
     repository: https://zero-down-time.github.io/kubezero/
   - name: istio-operator
-    version: "= 1.6"
+    version: ">= 1.6"
 kubeVersion: ">= 1.16.0"
