Make calico nodes a little more tolerant to CPU spikes

--- a/charts/kubezero-calico/templates/calico.yaml
+++ b/charts/kubezero-calico/templates/calico.yaml
@@ -487,12 +487,14 @@ spec:
             periodSeconds: 10
             initialDelaySeconds: 10
             failureThreshold: 6
+            timeoutSeconds: 3
           readinessProbe:
             exec:
               command:
               - /bin/calico-node
               - -felix-ready
             periodSeconds: 10
+            timeoutSeconds: 3
           volumeMounts:
             - mountPath: /lib/modules
               name: lib-modules
