More minor fixed for new Istio integration

--- a/charts/kubezero/templates/istio.yaml
+++ b/charts/kubezero/templates/istio.yaml
@@ -3,4 +3,11 @@
   syncPolicy:
     automated:
       prune: true
+
+ ignoreDifferences:
+  - group: apiextensions.k8s.io
+    kind: CustomResourceDefinition
+    jsonPointers:
+    - /metadata/labels
+    - /spec/additionalPrinterColumns
 {{- end }}
