Bugfix, move CRDs into plain manifest to help bootstrapping

--- a/deploy/templates/values.yaml
+++ b/deploy/templates/values.yaml
@@ -64,6 +64,12 @@ kubezero:
 
   istio:
     enabled: {{ index .Values "istio-operator" "enabled" }}
+    values:
+      ingress:
+        dnsNames:
+        {{- with .Values.istio.ingress.dnsNames }}
+        {{- . | toYaml | nindent 8 }}
+        {{- end }}
 
 {{- end }}
 
