--- a/charts/kubezero/templates/istio.yaml
+++ b/charts/kubezero/templates/istio.yaml
@@ -10,4 +10,9 @@
     jsonPointers:
     - /metadata/labels
     - /spec/additionalPrinterColumns
+  - group: admissionregistration.k8s.io
+    kind: ValidatingWebhookConfiguration
+    jsonPointers:
+    - /webhooks/clientConfig/caBundle
+    - /webhooks/failurePolicy
 {{- end }}
