--- a/charts/kubezero-istio/values.yaml
+++ b/charts/kubezero-istio/values.yaml
@@ -5,8 +5,8 @@ istiod:
 ingress:
   autoscaleEnabled: false
   replicaCount: 2
-  dnsNames:
-  - "*.example.com"
+  #dnsNames:
+  #- "*.example.com"
 
 istio-operator:
   hub: docker.io/istio
