Make private Ingress optional but enabled by default

--- a/deploy/templates/values.yaml
+++ b/deploy/templates/values.yaml
@@ -71,6 +71,7 @@ kubezero:
       istiod:
         replicaCount: {{ ternary 2 1 .Values.HighAvailableControlplane }}
       ingress:
+        private: {{ default true .Vauues.istio.ingress.private }}
         type: {{ default "NodePort" .Values.istio.ingress.type }}
         dnsNames:
         {{- with .Values.istio.ingress.dnsNames }}
