--- a/charts/kubezero-istio/templates/istio-private-ingress.yaml
+++ b/charts/kubezero-istio/templates/istio-private-ingress.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.ingress.private }}
 apiVersion: install.istio.io/v1alpha1
 kind: IstioOperator
 metadata:
@@ -99,3 +100,4 @@ spec:
 
     global:
       jwtPolicy: first-party-jwt
+{{- end }}
