--- a/charts/kubezero-aws-ebs-csi-driver/templates/storage-class.yaml
+++ b/charts/kubezero-aws-ebs-csi-driver/templates/storage-class.yaml
@@ -1,11 +1,14 @@
+{{- if .Values.StorageClass.create }}
 kind: StorageClass
 apiVersion: storage.k8s.io/v1
 metadata:
   name: ebs-sc-gp2-xfs
   labels:
 {{ include "kubezero-lib.labels" . | indent 4 }}
+  {{- if .Values.StorageClass.default }}
   annotations:
     storageclass.kubernetes.io/is-default-class: "true"
+  {{- end }}
 provisioner: ebs.csi.aws.com
 volumeBindingMode: WaitForFirstConsumer
 parameters:
@@ -16,7 +19,7 @@ parameters:
 allowVolumeExpansion: true
 {{- end }}
 
-{{- range .Values.storageClassZones }}
+{{- range .Values.StorageClass.Zones }}
 ---
 kind: StorageClass
 apiVersion: storage.k8s.io/v1
@@ -38,4 +41,5 @@ allowedTopologies:
   - key: failure-domain.beta.kubernetes.io/zone
     values:
     - {{ . }}
+{{- end }}
 {{- end }}
