Move metrics to monitoring NS

--- a/charts/kubezero/templates/metrics.yaml
+++ b/charts/kubezero/templates/metrics.yaml
@@ -1,6 +1,11 @@
 {{- if index .Values "metrics" "enabled" }}
-{{ template "kubezero-app.app" dict "root" . "name" "metrics" "type" "helm" }}
+{{ template "kubezero-app.app" dict "root" . "name" "metrics" "type" "helm" "namespace" "monitoring"}}
   syncPolicy:
     automated:
       prune: true
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: monitoring
 {{- end }}
